--- a/Newww.html
+++ b/Newww.html
@@ -137,7 +137,7 @@
 <body>
     <div id="introBlock">
         <h2>歡迎來到《尋夢之旅》</h2>
-        <p>在《尋夢之旅》中，每一個選擇都將帶來不同的結果和體驗。你將扮演扮演年輕的暢銷小說家，但某日在忙碌之餘，迷失了寫作的初衷。在一次偶然的機會，你回到了高中，親身為自己抉擇。通過與朋友查理、老師克莉絲汀以及母親麗塔的互動，使自己重新找回寫作的激情和方向，更了解自己是為了何目標而努力。</p>
+        <p>在《尋夢之旅》中，每一個選擇都將帶來不同的結果和體驗。你將扮演年輕的暢銷小說家，但某日在忙碌之餘，迷失了寫作的初衷。在一次偶然的機會，你回到了高中，親身為自己抉擇。通過與朋友查理、老師克莉絲汀以及母親麗塔的互動，使自己重新找回寫作的激情和方向，更了解自己是為了何目標而努力。</p>
         <button id="startButton">Start Game</button>
     </div>
     <div id="backgroundWrapper">
